--- a/viteproject/css/style.css
+++ b/viteproject/css/style.css
@@ -14,6 +14,13 @@ html, body, *{
 
 .item{
   background-color: rgb(127, 255, 212);
+  border-radius: 1rem;
+  box-shadow: 1rem 1rem 1rem rgb(0, 0, 0);
+}
+
+.text{
+  font-size: 2rem;
+  color: rgb(0, 0, 0);
 }
 
 img{
