--- a/viteproject/css/style.css
+++ b/viteproject/css/style.css
@@ -16,7 +16,7 @@ html, body, *{
   background-color: rgb(127, 255, 212);
   border-radius: 1rem;
   box-shadow: 1rem 1rem 1rem rgb(0, 0, 0);
-  width: 20%;
+  width: 15%;
   height: auto;
   margin: 2rem;
   transition: all 500ms;
@@ -27,11 +27,19 @@ html, body, *{
   color: rgb(0, 0, 0);
 }
 
-.batman{
-  
-  margin: 0 auto;
+.batmen{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 1rem auto;
 }
 
+.batman {
+  background-color: white
+}
+#dark{
+  background-color: black;
+}
 .item:hover{
   transform:translateY(-5rem);
 }
