--- a/viteproject/css/style.css
+++ b/viteproject/css/style.css
@@ -13,10 +13,11 @@ html, body, *{
 }
 
 .item{
-  background-color: rgb(127, 255, 212);
+  background-color: rgb(234, 65, 46);
+  border: solid 1rem rgb(255, 224, 102);
   border-radius: 1rem;
   box-shadow: 1rem 1rem 1rem rgb(0, 0, 0);
-  width: 27%;
+  width: 20%;
   height: auto;
   margin: 2rem;
 }
@@ -24,10 +25,26 @@ html, body, *{
 .text{
   font-size: 2rem;
   color: rgb(0, 0, 0);
+  background-color: rgb(240, 209, 193);
+  border-radius: .5rem;
+  width: 90%;
+  margin: auto;
+}
+
+.text2{
+  background-color: rgb(236, 236, 238);
+  font-size: 1.5rem;
+  width: 90%;
+  margin: auto;
+}
+
+.description{
+  margin: 1rem;
+  font-size: 1rem;
 }
 
 img{
-  width: 80%;
+  width: 90%;
   height: 55%;
   background-color: rgb(255, 255, 255);
 }
