--- a/viteproject/css/style.css
+++ b/viteproject/css/style.css
@@ -20,6 +20,11 @@ html, body, *{
   width: 20%;
   height: auto;
   margin: 2rem;
+  transition: all 500ms;
+}
+
+.item:hover{
+  transform: translateY(-2rem);
 }
 
 .batmen{
@@ -46,7 +51,7 @@ html, body, *{
 
 .description{
   margin: 1rem;
-  font-size: 1rem;
+  font-size: 1.5rem;
 }
 
 img{
