--- a/viteproject/css/variables.css
+++ b/viteproject/css/variables.css
@@ -1,141 +1,26 @@
 
-  .warm{
-    --primary: var(--dark-red);
-    --secondary: var(--light-red)
+  :root{
+    --light-blue: #2998ff;
+    --black: #000;
+    --white: #ffffff;
+    --dark-blue: #135cc5;
+    --light-red: #f87171;
+    --dark-red: #dc2626;
+    --gray: #252c30;
+    --card-red: #ea412e;
+    --border-yellow: #ffe066;
+    --magenta: #dea4b2;
+  
+  /* Intentions */
+  --primary: var(--light-blue);
+  --secondary: var(--dark-blue);
+  
+  /* Typography */
+    --h1: 11.391rem;
+    --h2: 7.594rem;
+    --h3: 5.063rem;
+    --h4: 3.375rem;
+    --h5: 2.25rem;
+    --h6: 1.5rem
   }
   
-  .cool{
-    --primary: var(--light-blue);
-    --secondary: var(--dark-blue)
-  }
-  
-  body{
-    background-color: var(--secondary);
-  }
-  .name{
-    background-color: var(--primary);
-    animation: header infinite 4s;
-  }
-  .box{
-    background-color: var(--secondary);
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    text-align: center;
-  }
-  
-  .item{
-    background-color: var(--card-red);
-    border: solid 1rem var(--border-yellow);
-    border-radius: 1rem ;
-    box-shadow: 1rem 1rem 1rem rgb(0, 0, 0);
-    width: 20%;
-    height: auto;
-    margin: 2rem;
-    transition: all 500ms;
-  }
-  
-  .item:hover{
-    transform: translateY(-2rem);
-  }
-  
-  .batmen{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin: 1rem auto;
-    width: 80vw;
-    background-color: var(--secondary);
-  }
-  
-  .batman, .robin, .btn{
-    font-size: 2rem;
-    border-radius: 0.5rem;
-    background-color: var(--magenta);
-    box-shadow: .5rem .5rem .5rem rgb(0, 0, 0);
-    transition: all 500ms;
-  }
-  
-  .batman:hover, .robin:hover{
-    transform: translateY(-.9rem);
-  }
-  
-  .buy{
-    font-size: var(--h6);
-    background-color: var(--white);
-    border-radius: .5rem;
-  }
-  
-  .text{
-    font-size: var(--h5);
-    color: rgb(0, 0, 0);
-    background-color: rgb(240, 209, 193);
-    border-radius: .5rem;
-    width: 90%;
-    margin: auto;
-  }
-  
-  .text2{
-    background-color: rgb(236, 236, 238);
-    font-size: 1.5rem;
-    width: 90%;
-    margin: auto;
-  }
-  
-  .description{
-    margin: 1rem;
-    font-size: 1.5rem;
-  }
-  
-  img{
-    width: 90%;
-    height: 55%;
-    background-color: rgb(255, 255, 255);
-  }
-  
-  @media screen and (max-width: 100rem) {
-    .item{
-      width: 20%;
-    }
-  }
-  
-  @media screen and (max-width: 75rem) {
-    .item{
-      width: 45%;
-    }
-  }
-  
-  @media screen and (max-width: 45rem) {
-    .item{
-      width: 70%;
-    }}
-
-    @keyframes header {
-      0%{
-        color: rgb(242, 243, 202);
-      }
-      12.5%{
-        color: rgb(240, 241, 159);
-      }
-      25%{
-        color: rgb(252, 187, 102);
-      }
-      37.5%{
-        color: rgb(245, 161, 52);
-      }
-      50%{
-        color: rgb(185, 107, 4);
-      }
-      62.5%{
-        color: rgb(245, 161, 52);
-      }
-      75%{
-        color: rgb(252, 187, 102);
-      }
-      87.5%{
-        color: rgb(241, 206, 159);
-      }
-      100%{
-        color: rgb(247, 222, 189)
-      }
-  }
