--- a/viteproject/css/variables.css
+++ b/viteproject/css/variables.css
@@ -10,10 +10,12 @@
     --card-red: #ea412e;
     --border-yellow: #ffe066;
     --magenta: #dea4b2;
+    --changing: linear-gradient(160deg, #302724, #ea412e);
+    --changing-cool: linear-gradient(160deg, #072053, #609be7);
   
   /* Intentions */
-  --primary: var(--light-blue);
-  --secondary: var(--dark-blue);
+    --primary: var(--light-blue);
+    --secondary: var(--dark-blue);
   
   /* Typography */
     --h1: 11.391rem;
